iRedMail-1.4:
    * DROPPED distribution release:
        - Debian 9 (stretch). Please use Debian 10 instead.

    * Improvements:
        - Enable long queue id support in logwatch.

    * Fixed issues:
        - tools/backup_pgsql.sh: Not dump databases with `--clean` argument.
        - Not install nftables package on Ubuntu 20.04.
        - [OpenBSD] Used wrong Python MySQL driver name in iRedAPD.
        - Fail2ban can not store banned IP address when its country name
          contains quotes.

    * Updated packages:
        + Roundcube webmail -> 1.4.11. Security and bug fixes.
        + netdata -> 1.29.0
        + mlmmjadmin -> 3.0.7
        + iRedAPD -> 4.7

iRedMail-1.3.2:
    * Supports new distribution releases:
        + OpenBSD 6.8. All backends are supported: MariaDB, PostgreSQL, OpenLDAP.
          Note: Fail2ban is not available on OpenBSD 6.8, because the latest
          Fail2ban-0.11.1 doesn't fully support Python-3.8.6 offered by
          OpenBSD 6.8.
        + FreeBSD 12.2.

    * DROPPED distribution release:
        - OpenBSD 6.7. Please use the latest stable release 6.8 instead.

    * Improvements:
        + [Nginx] Enable http2 support by default.
        + [Roundcube] Enable plugin `zipdownload` by default. It adds an
          option to download all attachments in a message to one zip file,
          when the message has multiple attachments.
        + [Amavisd] Log matched virus database name.

    * Fixed issues:
        - [FreeBSD] Can not correctly generate random password on FreeBSD
          12.1-RELEASE-p10.
        - [Fail2ban] Not catch all Roundcube login failures.
        - tools/create_mail_user_OpenLDAP.*: missing required ldap attr/value
          pairs: `enabledService=managesievetls` and `enabledService=sievetls`.

    * Updated packages:
        + Roundcube webmail -> 1.4.9
        + netdata -> 1.26.0
        + uwsgi -> 2.0.19.1. OpenBSD only.
        + mlmmjadmin -> 3.0.4
        + iRedAPD-4.6
        + iRedAdmin-1.2