@@ -256,8 +256,12 @@ if [ X"${KERNEL_NAME}" == X'LINUX' ]; then
         fi
 
         # Get distribution name as DISTRO_CODENAME
-        if [ -x /etc/centos-release ]; then
-            export DISTRO_CODENAME='centos'
+        if [ -e /etc/centos-release ]; then
+            if grep -i 'CentOS Stream release' /etc/centos-release &>/dev/null; then
+                export DISTRO_CODENAME='stream'
+            else
+                export DISTRO_CODENAME='centos'
+            fi
         else
             # RHEL
             export DISTRO_CODENAME='rhel'
